# space_engine

./: .gitignore  Cargo.toml  README.md  clippy.toml  guides.md
.cargo/: config.toml
assets/mods/vanilla/: mod.mod_info.ron
crates/core_assets/: Cargo.toml
crates/core_assets/assets/mods/pack2/: mod.mod_info.ron
crates/core_assets/assets/mods/vanilla/: mod.mod_info.ron
crates/core_assets/assets/packs/books/: mod.pack.ron
crates/core_assets/assets/packs/books/excluded/: book.item.ron
crates/core_assets/assets/packs/vanilla/: mod.pack.ron
crates/core_assets/assets/packs/vanilla/blocks/: dirt.item.ron
crates/core_assets/assets/packs/vanilla/blocks/sub/: grass.item.ron
crates/core_assets/examples/: print_content.rs
crates/core_assets/src/: assets.rs  bevy_api.rs  helpers.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  states.rs  systems.rs
crates/core_assets/src/resources/: assets.rs  temp.rs
crates/core_assets/src/systems/: building_state.rs  cleanup.rs
crates/core_camera/: Cargo.toml
crates/core_camera/src/: app_api.rs  commands_api.rs  components.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs
crates/core_internal/: Cargo.toml
crates/core_pack_objects/: Cargo.toml
crates/core_pack_objects/src/: assets.rs  bevy_api.rs  bundles.rs  commands.rs  components.rs  compos.rs  helpers.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs  traits.rs
crates/core_utils/: Cargo.toml
crates/core_utils/src/: components.rs  lib.rs  plugins.rs  prelude.rs
crates/core_world_streaming/: Cargo.toml
crates/core_world_streaming/src/: app_api.rs  bundles.rs  commands.rs  components.rs  helpers.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs  tests.rs  traits.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  plugin.rs  prelude.rs
crates/engine_core/: Cargo.toml
crates/engine_core/assets/: naming.lua
crates/engine_core/assets/mods/vanilla/: mod.mod_info.ron
crates/engine_core/examples/: assets.rs  naming.rs
crates/engine_core/src/: attributes.rs  bevy_api.rs  bundles.rs  commands.rs  components.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  states.rs  systems.rs
crates/engine_core/src/bevy_api/: items.rs
crates/engine_core/src/bundles/: naming.rs  scripting.rs
crates/engine_core/src/components/: markers.rs  naming.rs
crates/engine_core/src/plugins/: naming.rs
crates/engine_core/src/resources/: naming.rs
crates/engine_core/src/systems/: naming.rs  run_conditions.rs
crates/engine_core/tests/: hierarchy.rs
crates/galaxies/: Cargo.toml
crates/galaxies/src/: builders.rs  bundles.rs  commands.rs  commands_api.rs  components.rs  constants.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs
crates/save_pipeline/: Cargo.toml
crates/space/: Cargo.toml  clippy.toml  roadmap.txt  rustfmt.toml
crates/space/examples/: orbit_viewer.rs  two_body.rs
crates/space/src/: bundles.rs  commands.rs  components.rs  constants.rs  events.rs  helpers.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs
crates/space/src/bundles/: cam.rs  draw.rs  space.rs  two_body.rs
crates/space/src/commands/: builders.rs
crates/space/src/commands/builders/: bodies.rs  two_body.rs  vessels.rs
crates/space/src/components/: camera.rs  draw.rs  markers.rs  physics.rs
crates/space/src/components/physics/: bodies.rs  keplerian.rs  state_vectors.rs
crates/space/src/events/: cam_target.rs  transfers.rs
crates/space/src/helpers/: elliptic.rs  hyperbolic.rs
crates/space/src/plugins/: cam.rs  draw.rs  physics.rs
crates/space/src/systems/: last.rs  post_update.rs  run_conditions.rs  update.rs
crates/space/src/systems/post_update/: cam.rs  install.rs  update_changes.rs
crates/space/src/systems/update/: belts.rs  orbits.rs  physics.rs  transfer.rs  update_changes.rs
crates/space/src/systems/update/transfer/: bodies.rs  vessels.rs
crates/test_space/: Cargo.toml
crates/test_space/benches/arrays_of_structs/: main.rs
crates/test_space/benches/struct_of_arrays/: main.rs
crates/test_space/examples/: arrays_of_struct.rs  multi_threaded.rs  single_threaded.rs  struct_of_arrays.rs
crates/test_space/src/: celestial_body.rs  components.rs  constants.rs  lib.rs  plugins.rs  prelude.rs  resources.rs  systems.rs
crates/test_space/src/celestial_body/: aos.rs  soa.rs
crates/test_space/src/components/: aos.rs  markers.rs  physics.rs
crates/test_space/src/components/physics/: bodies.rs  keplerian.rs
crates/test_space/src/plugins/: multi_threaded.rs  physics.rs  single_threaded.rs
crates/test_space/src/systems/: aos.rs  update.rs
crates/test_space/src/systems/update/: physics.rs  update_changes.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  plugin.rs  prelude.rs  systems.rs
docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/search.desc/space_engine/: space_engine-desc-0-.js
docs/space_engine/: all.html  index.html
docs/space_engine/engine/: index.html  sidebar-items.js  struct.EnginePlugin.html
docs/space_engine/prelude/: constant.AU.html  constant.BODY_DEPTH.html  constant.G.html  constant.ORBIT_DEPTH.html  constant.PI.html  constant.SPACE_LAYER.html  constant.SPACE_LAYER_DEPTH.html  constant.SPACE_SCALE.html  constant.TWO_PI.html  enum.AppState.html  enum.BuildingStates.html  enum.LoadingStates.html  struct.Body.html  struct.BodyBuilder.html  struct.BuildFinished.html  struct.CamLayerConfig.html  struct.CameraBuilder.html  struct.CameraStyle.html  struct.ContentLoaded.html  struct.CoreEnginePlugin.html  struct.EnginePlugin.html  struct.InGame.html  struct.Keplerian.html  struct.Loading.html  struct.Orbit.html  struct.Paused.html  struct.RefFrame.html  struct.Running.html  struct.SpacePlugin.html  struct.SpacePos.html  struct.SpaceTimeScale.html  struct.Star.html  struct.StarSystem.html  struct.StateVec.html  struct.Vessel.html  (+7 more)
examples/core/: camera.rs  naming.rs  pack_objects.rs  print_content.rs  streaming.rs
examples/galaxy/: main.rs
examples/space/: orbit_viewer.rs  orbit_viewer_performance.rs  two_body.rs
src/: lib.rs  prelude.rs
(+211 files in other folders)
