[package]
name = "decay_engine"
version = "0.2.0"
readme = "README.md"
edition = "2021"

[workspace]
resolver = "2"

members = [
# abstraction over asset management. Similiar to resource location [https://minecraft.wiki/w/Resource_location]
    "crates/core_assets",
# for describing data which cannot be serialized, like assets
    "crates/core_pack_objects",
    "crates/engine_core",

    "crates/space",
    "crates/save_pipeline",
    "crates/engine",
]



[dependencies]
engine = { path = "crates/engine" }
bevy.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
engine = { path = "crates/engine" }
bevy-inspector-egui.workspace = true


[workspace.dependencies]
walkdir             = "2.5.0"
iyes_progress = "0.12.0"
bevy_asset_loader   = { version = "0.21.0", features = ["2d", "progress_tracking"]}
bevy                = { version = "0.14.2", features = ["file_watcher"] }
bevy_mod_scripting  = { version = "0.6.0", features = ["luajit52"] }
bevy_prototype_lyon = "0.12.0"
iyes_perf_ui        = "0.3.0"
itertools           = "0.13.0"
bevy_common_assets  = { version = "0.11.0",  features = ["ron"] }
bevy-inspector-egui = "0.26.0"
serde               = "1.0.164"
ron                 = "0.8.1"


[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"



[[example]]
name = "pack_objects"
path = "examples/core/pack_objects.rs"

[[example]]
name = "print_content"
path = "examples/core/print_content.rs"

[[example]]
name = "naming"
path = "examples/core/naming.rs"

[[example]]
name = "orbit_viewer"
path = "examples/space/orbit_viewer.rs"

[[example]]
name = "two_body"
path = "examples/space/two_body.rs"
