[package]
name = "space_engine"
version = "0.2.5"
readme = "README.md"
edition = "2021"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[profile.release]
codegen-units = 1
lto = "thin"




[workspace]
resolver = "2"
members = [
# abstraction over asset management. Similiar to resource location [https://minecraft.wiki/w/Resource_location]
    "crates/core_assets",
    "crates/core_internal",
    "crates/core_camera",
    "crates/core_utils",
    "crates/engine_core",
    "crates/test_space",
    "crates/space",
    "crates/engine",
]




[dependencies]
# export
engine = { path = "crates/engine" }
bevy = { workspace = true, features = [] }

[features]
default = []


[lib]
path = "src/lib.rs"

[dev-dependencies]
engine = { path = "crates/engine" }
bevy-inspector-egui.workspace = true


[workspace.dependencies]
bevy = { version = "^0.14.2", features = ["file_watcher", "serialize"] }
# bevy related
bevy_asset_loader   = { version = "0.21.0", features = ["2d", "progress_tracking"]}
bevy_common_assets  = { version = "0.11.0",  features = ["ron"] }
bevy_prototype_lyon = "0.12.0"
bevy-inspector-egui = "0.27.0"
iyes_progress       = "0.12.0"
# misc
bimap = "0.6.3"
serde               = "1.0.164"
itertools           = "0.13.0"
ron                 = "0.8.1"
walkdir             = "2.5.0"
# old versions
#iyes_perf_ui        = "0.3.0"
#bevy_mod_scripting  = { version = "0.6.0", features = ["luajit52"] }
#avian2d             = "0.1.2"

[workspace.lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"



# Core
[[example]]
name = "camera"
path = "examples/core/camera.rs"


# Space
[[example]]
name = "orbit_viewer"
path = "examples/space/orbit_viewer.rs"


[[example]]
name = "orbit_viewer_perf"
path = "examples/space/orbit_viewer_performance.rs"




