[package]
name = "core_assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir.workspace = true
bevy_asset_loader.workspace = true
bevy.workspace = true
iyes_progress.workspace = true
bevy-inspector-egui.workspace = true
bevy_common_assets.workspace = true
serde.workspace    = true
ron.workspace      = true

regex = "1.5"
# Utilities
serde_json = "1.0"

# mlua = { version = "0.9.5", features = ["lua54", "vendored"] }
